Fix dot product, add experimental serialization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "array-rs"
-version = "0.0.0"
+version = "0.0.1"
 authors = [ "alexchandel@gmail.com" ]
 
 [[lib]]
@@ -8,4 +8,4 @@ name = "array"
 path = "src/lib.rs"
 
 [[bin]]
-name = "array"
+name = "test"
