--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-before_install:
-  - sudo add-apt-repository --yes ppa:hansjorg/rust
-  - sudo add-apt-repository --yes ppa:cmrx64/cargo
-  - sudo apt-get update -qq
+language: rust
 install:
-  - sudo apt-get install -qq rust-nightly cargo
+  - curl http://static.rust-lang.org/cargo-dist/cargo-nightly-linux.tar.gz |
+    sudo tar --strip-components 1 -C /usr -xzf -
+  - curl http://www.rust-lang.org/rustup.sh | sudo sh -
 script:
   - cargo build -v
+  - rustdoc --test src/lib.rs -L target
+  - rustdoc src/lib.rs
