--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ install:
     sudo tar --strip-components 1 -C /usr -xzf -
   - curl http://www.rust-lang.org/rustup.sh | sudo sh -
 script:
-  - cargo build -v
+  - cargo clean
+  - cargo build --verbose
   - rustdoc --test src/lib.rs -L target
   - rustdoc src/lib.rs
+env:
+  - LD_LIBRARY_PATH=/usr/local/lib
